force-app/main/default/objects/CollectionException__c/CollectionException__c.object-meta.xml
<CustomObject>
    <label>Collection Exception</label>
    <nameField>
        <displayFormat>CE-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>