force-app/main/default/objects/CollectionException__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <type>TextArea</type>
</CustomField>