force-app/main/default/objects/CollectionException__c/fields/CollectionWaypointId__c.field-meta.xml
<CustomField>
    <fullName>CollectionWaypointId__c</fullName>
    <label>Collection Waypoint Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>