force-app/main/default/objects/CollectionException__c/fields/DailyDispatch__c.field-meta.xml
<CustomField>
    <fullName>DailyDispatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Dispatch</label>
    <referenceTo>DailyDispatch__c</referenceTo>
    <relationshipLabel>Collection Exceptions</relationshipLabel>
    <relationshipName>CollectionExceptions</relationshipName>
    <type>Lookup</type>
</CustomField>