force-app/main/default/objects/CollectionException__c/fields/DispatchLocation__c.field-meta.xml
<CustomField>
    <fullName>DispatchLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch Location</label>
    <referenceTo>DispatchLocation__c</referenceTo>
    <relationshipLabel>Collection Exceptions</relationshipLabel>
    <relationshipName>CollectionExceptions</relationshipName>
    <type>Lookup</type>
</CustomField>