force-app/main/default/objects/CollectionException__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>DATEVALUE(CreatedDate) &lt; TODAY() - 30</formula>
    <label>Scheduled For Deletion?</label>
    <type>Checkbox</type>
</CustomField>