force-app/main/default/objects/CollectionException__c/fields/QrCodes__c.field-meta.xml
<CustomField>
    <fullName>QrCodes__c</fullName>
    <label>Qr Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>