force-app/main/default/objects/CollectionException__c/fields/SelectedExceptionId__c.field-meta.xml
<CustomField>
    <fullName>SelectedExceptionId__c</fullName>
    <label>Selected Exception Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>